objects/vlocity_ins__PolicyWithdrawalSurrenderLoan__c.object
<CustomObject>
    <description>DEPRECATED. Represents funds distribution information about an insurance policy such as loans, withdrawals or voluntary termination. Master-detail child object of Policy (deprecated).</description>
    <fields>
        <fullName>vlocity_ins__PolicyId__c</fullName>
        <label>Policy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__Policy__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IndividualLife</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipName>Withdrawals_and_Surrenders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubType__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic Premium Loan</fullName>
                </value>
                <value>
                    <fullName>Dividends on Deposit Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Full Liquidation</fullName>
                </value>
                <value>
                    <fullName>Interest Only, Surrender-Free Amount Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Interest Only / Gain Only Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Non Preferred Standard Loan</fullName>
                </value>
                <value>
                    <fullName>One Year Term Partial</fullName>
                </value>
                <value>
                    <fullName>Paid - Up Additions Partial Surrender</fullName>
                </value>
                <value>
                    <fullName>Preferred Loan</fullName>
                </value>
                <value>
                    <fullName>Required Minimum Distribution</fullName>
                </value>
                <value>
                    <fullName>Specified Amount Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Substantially Equal Payments</fullName>
                </value>
                <value>
                    <fullName>Surrender Free Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__SurrenderFee__c</fullName>
        <label>Surrender Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Payment / Bank Drafting Program</fullName>
                </value>
                <value>
                    <fullName>Full Surrender</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>One Time Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__WithdrawPercentage__c</fullName>
        <label>Withdraw Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__WithdrawalSurrenderDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__WithholdingTaxAmount__c</fullName>
        <label>Withholding Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Withdrawal, Surrender, &amp; Loan</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Withdrawals, Surrenders, &amp; Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>